2012-03-01  Jens Alfke <jens@mooseyard.com>

	* Source/NSJSONSerialization.m:
	Use %g for numeric output format.

2012-03-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSRunLoopWatcher.h:
	* Source/NSXMLPrivate.h:
	* Source/GSRunLoopCtxt.h:
	* Source/common.h:
	* Source/Additions/NSError+GNUstepBase.m:
	* Source/GSURLPrivate.h:
	Include config.h via common.h ... and have that turn off _GNU_SOURCE
	so GNU extensions aren't used and we stick to standard strerror_r

2012-03-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m: More cleanup.

2012-03-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLDocument.m:
	* Source/NSXMLNode.m:
	* Source/NSXMLElement.m:
	Cleanup to conform to coding standards/conventions.
	Fix lots of functions to be local in scope.
	Add comments about needing to implement correct object ownership
	model.

2012-02-27 Doug Simons <doug.simons@testplant.com>

	* Source/NSXMLNode.m: Fix a crashing bug after an invalid xpath
	expression is used.

2012-02-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/NSError+GNUstepBase.m: try to ensure we always get
	the POSIX version of strerror_h.

2012-02-27  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSLocale.m:
	 - Deprecate GSSetLocale and GSSetLocaleC; they now do nothing
	   but print a warning.
	 - Introduce GSDefaultLanguageLocale(), which is a
	   substitute for GSSetLocale(LC_MESSAGES, nil), which just returns the
	   current setting of LC_MESSAGES.
	* Source/NSObject.m (+initialize): Remove GSSetLocaleC call,
	which was changing the libc locale.
	* Source/NSUserDefaults.m: Use GSDefaultLanguageLocale() instead of
	GSSetLocale(LC_MESSAGES, nil)

2012-02-27  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSArchiver.m (-resetArchiver): Write [self systemVersion] as
	the archive version instead of 0, because this is what will be stored in
	the archive if -encodeRootObject: is not called.

2012-02-27  Eric Wasylishen  <ewasylishen@gmail.com>
